Fixed chowster-font image sizing on mobile

--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -62,6 +62,10 @@ body {
 
 .landing-page {
   font-size: 1rem;
+
+  .chowster-font {
+    font-size: 4rem;
+  }
 }
 
 #welcome {
@@ -101,6 +105,10 @@ body {
 @media only screen and (max-width: $breakpoint-md) {
   .landing-page {
     font-size: 1.4rem;
+
+    .chowster-font {
+      font-size: 3rem;
+    }
   }
 
   .hide-on-md {
